WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131430
fullscreen controls first show a play button instead of a pause button
https://bugs.webkit.org/show_bug.cgi?id=131430
Summary
fullscreen controls first show a play button instead of a pause button
Jeremy Jones
Reported
2014-04-08 22:52:50 PDT
fullscreen controls first show a play button instead of a pause button.
Attachments
Patch
(2.65 KB, patch)
2014-04-08 22:57 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
Patch
(2.65 KB, patch)
2014-04-09 00:01 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2014-04-08 22:57:18 PDT
Created
attachment 228940
[details]
Patch
Jeremy Jones
Comment 2
2014-04-08 23:03:25 PDT
***
Bug 131428
has been marked as a duplicate of this bug. ***
Jeremy Jones
Comment 3
2014-04-08 23:03:46 PDT
***
Bug 131429
has been marked as a duplicate of this bug. ***
Jeremy Jones
Comment 4
2014-04-09 00:01:35 PDT
Created
attachment 228948
[details]
Patch
WebKit Commit Bot
Comment 5
2014-04-09 09:13:26 PDT
Comment on
attachment 228948
[details]
Patch Clearing flags on attachment: 228948 Committed
r167014
: <
http://trac.webkit.org/changeset/167014
>
WebKit Commit Bot
Comment 6
2014-04-09 09:13:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug