fullscreen controls first show a play button instead of a pause button https://bugs.webkit.org/show_bug.cgi?id=131430

Patch by Jeremy Jones <jeremyj@apple.com> on 2014-04-09
Reviewed by Jer Noble.

isPlaying() is false while buffering, paused() isn't; use paused() for
the play button.

* platform/ios/WebVideoFullscreenModelMediaElement.mm:
(WebVideoFullscreenModelMediaElement::setMediaElement):
(WebVideoFullscreenModelMediaElement::handleEvent):
Use HTMLMediaElement::paused() instead of HTMLMediaElement::isPlaying()

Canonical link: https://commits.webkit.org/149499@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167014 268f45cc-cd09-0410-ab3c-d52691b4dbfc